# kinetic_test

./: .clang-format  .gitignore  CMakeLists.txt  NAMING.md
CMake/modules/: setup_testing.cmake
include/: library.h
test/: CMakeLists.txt  test_file.cpp
